--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
             <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
                 <artifactId>artifactory-maven-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.6.2</version>
                 <executions>
                     <execution>
                         <id>build-info</id>
@@ -260,6 +260,7 @@
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.8.7</version>
 						<executions>
 							<execution>
 								<id>pre-unit-test</id>
@@ -279,7 +280,12 @@
 								</goals>
 								<configuration>
 									<!-- Sets the path to the file which contains the execution data. -->
+									<!--
 									<dataFile>${project.build.directory}/jacoco.exec</dataFile>
+									-->
+									<formats>
+										<format>XML</format>
+									</formats>
 								</configuration>
 							</execution>
 						</executions>
